# writ

./: .gitignore  BENCHMARKS.md  CLAUDE.md  Cargo.toml  LICENSE  PHASES.md  README.md  TODO.md  tarpaulin-report.json
.github/workflows/: ci.yml  pages.yml
.spec/: ARCHITECTURE.md  DECISIONS.md  ecs.md
.spec/language/: reflection.md  stdlib.md  structs.md  syntax.md  type-system.md
.spec/runtime/: coroutines.md  debug.md  register-vm.md  rust-interop.md  vm.md
.spec/tooling/: error-messages.md  lsp.md  vscode.md
benches/: compiler.rs  lexer.rs  parser.rs  pipeline.rs  vm.rs
crates/writ-codegen/: Cargo.toml
crates/writ-codegen/src/: rust_gen.rs  type_map.rs
crates/writ-compiler/: Cargo.toml
crates/writ-compiler/src/: chunk.rs  compiler.rs  error.rs  instruction.rs  lib.rs  local.rs  opcode.rs  peephole.rs
crates/writ-compiler/tests/: compiler_tests.rs
crates/writ-lexer/: Cargo.toml
crates/writ-lexer/src/: error.rs  lexer.rs  token.rs
crates/writ-lexer/tests/: lexer_tests.rs
crates/writ-lsp/: Cargo.toml
crates/writ-lsp/src/: analysis.rs  completion.rs  convert.rs  definition.rs  diagnostics.rs  document.rs  hover.rs  lib.rs  main.rs  references.rs  rename.rs  server.rs
crates/writ-lsp/tests/: completion_tests.rs  definition_tests.rs  diagnostics_tests.rs  hover_tests.rs  import_tests.rs  rename_tests.rs
crates/writ-parser/: Cargo.toml
crates/writ-parser/src/: ast.rs  error.rs  lib.rs  parser.rs
crates/writ-parser/tests/: coroutine_tests.rs  decl_tests.rs  expr_tests.rs  stmt_tests.rs
crates/writ-stdlib/: Cargo.toml
crates/writ-stdlib/src/: array.rs  basic.rs  color.rs  dict.rs  input.rs  interpolation.rs  io.rs  lib.rs  math.rs  matrix.rs  noise.rs  quaternion.rs  random.rs  rect.rs  reflect.rs  regex.rs  string.rs  time.rs  timer.rs  transform.rs  tween.rs  vector.rs
crates/writ-stdlib/tests/: stdlib_tests.rs
crates/writ-types/: Cargo.toml
crates/writ-types/src/: checker.rs  env.rs  error.rs  lib.rs  (+4 more)
crates/writ-vm/: Cargo.toml
docs/: .gitignore  add-frontmatter.js  astro.config.ts  package-lock.json  package.json
examples/: profile_bottlenecks.rs  profile_instructions.rs
extensions/jetbrains-writ/: README.md  build.gradle.kts  settings.gradle.kts
extensions/vim-writ/: README.md
extensions/vscode-writ/: .vscodeignore  README.md  esbuild.js  package.json  pnpm-lock.yaml  tsconfig.json
hooks/: pre-commit
src/: lib.rs  main.rs  resolver.rs
src/codegen/: mod.rs  rust_gen.rs  type_map.rs
src/compiler/: chunk.rs  compiler.rs  error.rs  instruction.rs  mod.rs  opcode.rs  peephole.rs  upvalue.rs
src/lexer/: lexer.rs  mod.rs
src/parser/: ast.rs  error.rs  mod.rs  parser.rs
src/stdlib/: array.rs  basic.rs  color.rs  dict.rs  input.rs  interpolation.rs  io.rs  math.rs  matrix.rs  mod.rs  noise.rs  quaternion.rs  random.rs  rect.rs  reflect.rs  regex.rs  string.rs  time.rs  timer.rs  transform.rs  tween.rs  vector.rs
src/types/: checker.rs  env.rs  error.rs  mod.rs  module_registry.rs  registry.rs  suggestions.rs  typed_ast.rs  types.rs
src/vm/: aosoa.rs  binding.rs  borrow_guard.rs  class_instance.rs  coroutine.rs  debug.rs  error.rs  field_layout.rs  frame.rs  intern.rs  mod.rs  native.rs  object.rs  sequence.rs  value.rs  vm.rs  writ_struct.rs
tests/: integration.rs  module_resolution.rs  stdlib_coverage.rs  type_checker.rs
(+92 files in other folders)
