[workspace]
resolver = "2"
members = ["crates/writ-lsp", "crates/writ-bench"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[package]
name = "writ"
version.workspace = true
edition.workspace = true
description = "An embeddable, statically typed scripting language for Rust"
license = "MIT"
repository = "https://github.com/forge18/writ"
keywords = ["scripting", "embedded", "language", "gamedev", "vm"]
categories = ["game-development", "embedded", "scripting"]
readme = "README.md"

[features]
mobile-aosoa = []
debug-hooks = []

[dependencies]
rand = "0.8"
regex = "1"
glam = "0.29"
fastnoise-lite = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "lexer"
harness = false

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "compiler"
harness = false

[[bench]]
name = "vm"
harness = false

[[bench]]
name = "pipeline"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
lto = "fat"
codegen-units = 1

# Profiling: same as release but with debug symbols and no strip
[profile.profiling]
inherits = "release"
debug = 2
strip = "none"
