[package]
name = "writ-lsp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "writ-lsp"
path = "src/main.rs"

[dependencies]
writ-lexer = { path = "../writ-lexer" }
writ-parser = { path = "../writ-parser" }
writ-types = { path = "../writ-types" }
lsp-server = "0.7"
lsp-types = "0.97"
serde = "1"
serde_json = "1"
log = "0.4"

[dev-dependencies]
tempfile = "3"
