[package]
name = "writ-stdlib"
version.workspace = true
edition.workspace = true

[dependencies]
writ-vm = { path = "../writ-vm" }
writ-compiler = { path = "../writ-compiler" }
writ-lexer = { path = "../writ-lexer" }
writ-parser = { path = "../writ-parser" }
rand = "0.8"
regex = "1"
glam = "0.29"
fastnoise-lite = "1"
